# snapcastc

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  test.md
debian/: .gitignore  changelog  control  copyright  default  postinst  postrm  preinst  prerm  rules  snapcastc.snapcastc-client.service  snapcastc.snapcastc-server.service
etc/defaults/: snapcastc
etc/systemd/system/: snapcastc-client.service  snapcastc-server.service
scripts/: builddockerfile  docker_make_debian_package  make_debian_package  snap_setstream  snapclient_getstreams  snapclient_getvolume  snapclient_mute  snapclient_setvolume
src/: .clang-format  CMakeLists.txt  alloc.h  alsaplayer.c  alsaplayer.h  client-test.c  client.c  client.h  clientmgr.c  clientmgr.h  error.h  inputpipe.c  inputpipe.h  intercom.c  intercom.h  intercom_client.c  intercom_client.h  intercom_common.h  intercom_srv.c  intercom_srv.h  jsonrpc.c  jsonrpc.h  opuscodec.c  opuscodec.h  packet_types.h  pcmchunk.c  pcmchunk.h  pqueue.c  pqueue.h  server-test.c  server.c  snapcast.h  socket.c  socket.h  stream.c  stream.h  syscallwrappers.c  syscallwrappers.h  taskqueue.c  taskqueue.h  (+9 more)
